--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@typescript-eslint/parser": "^5.40.1",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.26.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "typescript": "^4.8.4"
   },
   "config": {
